--- a/app/src/main/res/layout/fragment_label_settings.xml
+++ b/app/src/main/res/layout/fragment_label_settings.xml
@@ -50,38 +50,20 @@
                 android:hint="@string/company" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/positionTextInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companyInputLayout">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/positionEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/position" />
-        </android.support.design.widget.TextInputLayout>
-
         <ImageView
             android:id="@+id/previewImageView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginEnd="25dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="@string/print_preview"
             android:scaleType="centerCrop"
             android:src="@drawable/preview"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/positionTextInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/companyInputLayout" />
 
         <ImageButton
             android:id="@+id/previewButton"
@@ -103,7 +85,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/print_preview"
-            android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/previewButton"
@@ -131,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/print"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorHighlight"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/printButton"
