--- a/app/src/main/res/layout/fragment_printer_settings.xml
+++ b/app/src/main/res/layout/fragment_printer_settings.xml
@@ -101,11 +101,32 @@
             <com.phearme.macaddressedittext.MacAddressEditText
                 android:id="@+id/macTextInputEdit"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="wrap_content"
                 android:hint="@string/mac"
+                android:inputType="textUri"
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp" />
 
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/urlTextInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/macTextInputLayout">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/urlTextInputEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/url"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp" />
         </android.support.design.widget.TextInputLayout>
 
         <ImageButton
@@ -114,20 +135,21 @@
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="@string/save"
             android:scaleType="fitEnd"
             android:src="@drawable/ic_save"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/macTextInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/urlTextInputLayout" />
 
         <TextView
             android:id="@+id/saveButtonLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorHighlight"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/saveButton"
             app:layout_constraintEnd_toEndOf="@+id/saveButton"
@@ -154,7 +176,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/test"
-            android:textColor="@color/colorPrimary"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/testButton"
             app:layout_constraintEnd_toEndOf="@+id/testButton"
